--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
   <body>
     <h1>Temp Message Goes Here !!!</h1>
   </body>
