style(add_dialog_eleemnt): add a dialog as a mean to present message
 keep h1 element as the title of the extension

--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Temp Message Goes Here !!!</h1>
+    <h1>Chrome Extension Starter Kit</h1>
+    <dialog open>Temp Message Goes Here !!!</dialog>
   </body>
 </html>
